# crypto_agent

./: .gitignore  01-3综合实习报告_系统设计类(学生用).doc  02综合实习笔记(学生用).doc  03综合实习总结(学生用).doc  AGENT.md  CLAUDE.md  LICENSE  README.md  b.ai_test.py  guide.md  real_x402_service.md  todo.md  毕业设计.txt
scripts/: compact_taskbook.py  expand_proposal_sections.py  fill_midterm_progress.py
x402-agent-demo/: .env.example  QUICKSTART.md  README.md  chainlit.md  chainlit_app.py  main.py  pyproject.toml  run_agent.py  run_mock_service.py  setup.py  test_system.py
x402-agent-demo/agent-client/: agent.py
x402-agent-demo/mcp-server/: server.py
x402-agent-demo/mock-service/: app.py
x402-agent-demo/src/x402_agent_demo/: __init__.py
