[project]
name = "x402-agent-demo"
version = "0.1.0"
description = "Autonomous Economic AI Agent based on x402 Protocol and MCP Architecture"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.39.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
    "chainlit>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x402_agent_demo"]
